--- a/server/package.json
+++ b/server/package.json
@@ -4,27 +4,29 @@
     "description": "Backend for API Tester Tool",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js",
-      "dev": "nodemon index.js"
+        "start": "node index.js",
+        "dev": "nodemon index.js"
     },
     "keywords": [
-      "api",
-      "tester",
-      "postman",
-      "express"
+        "api",
+        "tester",
+        "postman",
+        "express"
     ],
     "author": "",
     "license": "MIT",
     "dependencies": {
-      "axios": "^1.3.4",
-      "bcryptjs": "^2.4.3",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "jsonwebtoken": "^9.0.0",
-      "mongoose": "^7.0.1"
+        "@google/generative-ai": "^0.24.0",
+        "axios": "^1.3.4",
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "generative-ai": "^0.1.4",
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^7.0.1"
     },
     "devDependencies": {
-      "nodemon": "^2.0.21"
+        "nodemon": "^2.0.21"
     }
-  }
+}
